@@ -3,6 +3,10 @@ Melon Application Change Log
 
 Version 0.0.1 under development
 --------------------------------
+New: для переводов t() внесены изменения: по умолчанию используется категория 'core', для смены нужно указывать
+	категорию первым параметром: t('category', 'text'), так же и для передачи параметров нужно указывать категорию:
+	t('category', 'text {param}', array('{param}' => '[param text', ));
+New: добалена проверка для загружаемых файлов
 New: добавлены екшены для сохранения изображений и файлов через редактор, как для админки так и для фронта
 New: изменен редактор на imperavi, определение редактора в конфиге формы через метод: $this->getRedactorFormElement()
 New: переместил подключение gii и дебаг панели в локальные файлы
